# Airsync-Platform

./: .gitignore  Cargo.toml  PHASE_1_SPECIFICATION.md  README.md
crates/receiver-core/: Cargo.toml
crates/receiver-core/src/: chirp.rs  http.rs  lib.rs
crates/receiver-core/src/airplay/: config.rs  process.rs
crates/receiver-core/src/calibration/: mod.rs  signal.rs
crates/receiver-core/src/hardware/: detector.rs  mod.rs
crates/shared-protocol/: Cargo.toml
crates/shared-protocol/src/: calibration.rs  device.rs  lib.rs  messages.rs
docker/: test-in-docker.sh
docker/local-testing/: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  test-local.sh
docker/pi-simulator/: Dockerfile  README.md  docker-compose.yml  test-installer.sh
docker/pi-simulator/mock-proc/: cpuinfo  meminfo
docs/: calibration-iteration-plan.md  calibration-precision.md  ios-debian-pairing.md  shairport-sync-integration.md
installer/: README.md
installer/scripts/: install.sh  package-for-pi.sh
installer/tests/: --help  test-installer.sh
ios-app/AirSync/: Package.swift  README.md
ios-app/AirSync/Sources/AirSync/: Receiver.swift  ReceiverDiscovery.swift  ReceiverListView.swift
ios-app/AirSync/Tests/AirSyncTests/: ReceiverDiscoveryTests.swift  ReceiverTests.swift
mobile-applications/AirSync/AirSync/: AirSyncApp.swift  ContentView.swift
mobile-applications/AirSync/AirSync.xcodeproj/: project.pbxproj
mobile-applications/AirSync/AirSync/Calibration/: CalibrationSession.swift  CalibrationSignalSpec.swift  CalibrationView.swift  ChirpConfig.swift  ChirpGenerator.swift  ChirpSequence.swift  (+4 more)
mobile-applications/AirSync/AirSyncTests/: AirSyncTests.swift  ChirpGeneratorTests.swift  TestAudioFixtures.swift
mobile-applications/AirSync/AirSyncUITests/: AirSyncUITests.swift  AirSyncUITestsLaunchTests.swift
mobile-applications/AirSync/Config/: AirSync-Info.plist
(+13 files in other folders)
