[workspace]
resolver = "2"
members = [
    "crates/shared-protocol",
    "crates/receiver-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AirSync Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JackDarnell/airsync"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols for smaller binary
panic = "abort"     # Abort on panic (smaller binary)
