[package]
name = "airsync-receiver-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
airsync-shared-protocol = { path = "../shared-protocol" }
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
axum = { version = "0.7", features = ["macros", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
tower = "0.5"
hostname = "0.3"
hound = "3"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
hyper = "1"
tokio = { workspace = true, features = ["full"] }
